# mirth

./: .gitignore  README.md  flake.nix  pyproject.toml
microservices/telegram-bot-service/: Taskfile.yaml  pyproject.toml
microservices/telegram-bot-service/src/mirth/application/: mediator.py  provider.py  registry.py
microservices/telegram-bot-service/src/mirth/application/contracts/: __init__.py  contract.py  user.py
microservices/telegram-bot-service/src/mirth/application/interactors/: __init__.py  interactor.py  user.py
microservices/telegram-bot-service/src/mirth/application/transport/: __init__.py  user.py
microservices/telegram-bot-service/src/mirth/entrypoints/: __main__.py
microservices/telegram-bot-service/src/mirth/entrypoints/faststream/: provider.py
microservices/telegram-bot-service/src/mirth/entrypoints/telegram/: __init__.py  provider.py  registry.py
microservices/telegram-bot-service/src/mirth/entrypoints/telegram/handlers/: user.py
microservices/telegram-bot-service/src/mirth/entrypoints/telegram/middlewares/: __init__.py  fluent.py
services/robot/: README.md  Taskfile.yaml  pyproject.toml
services/robot/src/mirth/application/: __init__.py  mediator.py  provider.py  registry.py
services/robot/src/mirth/application/contracts/: __init__.py
services/robot/src/mirth/application/interactors/: __init__.py  user.py
services/robot/src/mirth/application/transport/: user.py
services/robot/src/mirth/entrypoints/: __main__.py
services/robot/src/mirth/entrypoints/faststream/: provider.py
services/robot/src/mirth/entrypoints/telegram/: __init__.py  main.py  provider.py  registry.py
services/robot/src/mirth/entrypoints/telegram/dialogs/: __init__.py
services/robot/src/mirth/entrypoints/telegram/handlers/: admin.py  user.py
(+56 files in other folders)
