[project]
name = "mirth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "aiogram-dialog>=2.4.0",
    "dishka>=1.6.0",
    "dynaconf>=3.2.11",
    "faststream[nats]>=0.5.46",
    "lz4>=4.4.4",
    "ormsgpack>=1.10.0",
    "structlog>=25.4.0",
    "sulguk>=0.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
]
